force-app/main/default/objects/Apttus_Config2__IncentiveSystemProperties__c/Apttus_Config2__IncentiveSystemProperties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Incentive System Properties</description>
    <label>Incentive System Properties</label>
</CustomObject>