force-app/main/default/objects/Apttus_Config2__IncentiveSystemProperties__c/fields/Apttus_Config2__AllowUserOverride__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AllowUserOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether user override is allowed for promotions</description>
    <inlineHelpText>Indicates whether user override is allowed for promotions</inlineHelpText>
    <label>Allow User Override ?</label>
    <type>Checkbox</type>
</CustomField>