force-app/main/default/objects/Apttus_Config2__IncentiveSystemProperties__c/fields/Apttus_Config2__BenefitDimensionAllowMultiple__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BenefitDimensionAllowMultiple__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether coupons are displayed for the incentive</description>
    <inlineHelpText>Indicates whether benefit dimension inputs should allow multiple selection or not.</inlineHelpText>
    <label>Benefit Dimension Allow Multiple</label>
    <type>Checkbox</type>
</CustomField>