force-app/main/default/objects/Apttus_Config2__IncentiveSystemProperties__c/fields/Apttus_Config2__ContextType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContextType__c</fullName>
    <defaultValue>&quot;Order Line Item&quot;</defaultValue>
    <description>The type of context associated with the incentive. Valid values are :

Line Item
Order Line Item
External Order Summary Item
Milestone</description>
    <inlineHelpText>The type of context associated with the incentive. Valid values are :

Line Item
Order Line Item
External Order Summary Item
Milestone</inlineHelpText>
    <label>Context Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>