force-app/main/default/objects/Apttus_Config2__IncentiveSystemProperties__c/fields/Apttus_Config2__DisallowNegativeLoyaltyPointsBalance__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisallowNegativeLoyaltyPointsBalance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether negative loyalty points balance should be disallowed</description>
    <inlineHelpText>Indicates whether negative loyalty points balance should be disallowed</inlineHelpText>
    <label>Disallow Negative Loyalty Points Balance</label>
    <type>Checkbox</type>
</CustomField>