force-app/main/default/objects/Apttus_Config2__IncentiveSystemProperties__c/fields/Apttus_Config2__DisplayCoupons__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisplayCoupons__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether coupons are displayed for the incentive</description>
    <inlineHelpText>Indicates whether coupons are displayed for the incentive</inlineHelpText>
    <label>Display Coupons ?</label>
    <type>Checkbox</type>
</CustomField>