force-app/main/default/objects/Apttus_Config2__IncentiveSystemProperties__c/fields/Apttus_Config2__LoyaltyLevelUpdateFrequency__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LoyaltyLevelUpdateFrequency__c</fullName>
    <defaultValue>&quot;Auto&quot;</defaultValue>
    <description>Indicates the how updates to loyalty levels should be handled. Valid values are:

Auto
OnDemand

The default value is Auto</description>
    <inlineHelpText>Indicates the how updates to loyalty levels should be handled. Valid values are:

Auto
OnDemand

The default value is Auto</inlineHelpText>
    <label>Loyalty Level Update Frequency</label>
    <type>TextArea</type>
</CustomField>