force-app/main/default/objects/Apttus_Config2__IncentiveSystemProperties__c/fields/Apttus_Config2__LoyaltyOrderBatchSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LoyaltyOrderBatchSize__c</fullName>
    <defaultValue>250</defaultValue>
    <description>The order batch size for loyalty point calculation. The default value is 250. The SFDC governor limit affects the batch size.</description>
    <inlineHelpText>The order batch size for loyalty point calculation. The default value is 250. The SFDC governor limit affects the batch size.</inlineHelpText>
    <label>Loyalty Order Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>