force-app/main/default/objects/Apttus_Config2__IncentiveSystemProperties__c/fields/Apttus_Config2__RollupPeriodSource__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupPeriodSource__c</fullName>
    <description>Indicates the source field in the context object which determines the rollup period</description>
    <inlineHelpText>Indicates the source field in the context object which determines the rollup period</inlineHelpText>
    <label>Rollup Period Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>