force-app/main/default/objects/Apttus_Config2__IncentiveSystemProperties__c/fields/Apttus_Config2__UseType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UseType__c</fullName>
    <defaultValue>&quot;Rebate&quot;</defaultValue>
    <description>The incentive use type. Valid Values are:

Promotion
Rebate
Milestone Incentive</description>
    <inlineHelpText>The incentive use type. Valid Values are:

Promotion
Rebate
Milestone Incentive</inlineHelpText>
    <label>Application Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>